<resources>
    <string name="app_name">Chat</string>
    <string name="registration">registration</string>
    <string name="login_btn">login_btn</string>
    <string name="submit">submit</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="display_name">display_name</string>
    <string name="create_new_accound">create new accound</string>
    <string name="login_alred">Already have Account?..Login</string>
    <string name="login_ac">login_ac</string>
    <string name="not_have_ac">Not Already Have Account?..Register</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password..?</string>
    <string name="home_nav">Home</string>
    <string name="profile_nav">Profile</string>
    <string name="users_nav">Users</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homefragment">homefragment</string>
    <string name="Username">UserName</string>
    <string name="profile_fragenment">Profile Fragenment</string>
    <string name="About">hey_i_am_using_schat</string>
    <string name="uid_hint">This is not your user id this only Dsiplay name for your Schat contact</string>
    <string name="name">Name</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="About2">About</string>
    <string name="mobile">Mobile</string>
    <string name="title_activity_chatmassage">chatmassage</string>
    <string name="type_a_massage">Type a massage</string>
    <string name="type_a_massege">Type a massege</string>
    <string name="type_a_message">Type a message</string>
    <string name="type_a_massgae">Type a Massgae</string>
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <!-- TODO: time nd adte -->
    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>

    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">ago</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name_and_about">Name and about</string>
    <string name="naame">Name</string>
    <string name="A">About</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
