<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1eded"
    tools:context=".user_profile">

    <ImageView
        android:id="@+id/C_cover_pic"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:src="@drawable/cover"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/C_Dp_pic"
        android:layout_width="136dp"
        android:layout_height="138dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/images"  />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginTop="270dp"
        android:background="@drawable/profilelayout"

        >

        <TextView
            android:id="@+id/User_name"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="61dp"
            android:textSize="20dp"
            android:paddingStart="5dp"
            android:text="@string/Username"
            android:textColor="@color/colorBlack" />

        <TextView
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="47dp"
            android:textSize="12sp"
            android:paddingStart="5dp"
            android:text="@string/name"
          />
        <TextView

            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:text="@string/name_and_about"
            android:textSize="12sp"
            android:paddingStart="5dp"
            android:textColor="@color/colorPrimary"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginVertical="60dp"
            android:background="@color/colorGray"
            android:layout_marginTop="30dp"
            >

        </LinearLayout>

        <TextView
            android:id="@+id/CAbout"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dp"
            android:paddingStart="5dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:text="@string/About" />
</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/profilelayout"
        android:layout_marginTop="380dp"
        android:weightSum="10"
        >
        <TextView
            android:id="@+id/Cnumber"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textSize="20sp"
            android:layout_weight="5"
            android:layout_marginTop="9dp"
            android:textColor="@color/colorBlack"
            android:paddingStart="5dp"


            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@null"
            android:src="@drawable/call"
            android:layout_marginTop="9dp"
            />
    </LinearLayout>

</RelativeLayout>

