<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EdEd"
    tools:context=".chatmassage"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarchat"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgc"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/images" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="1dp"
    >

        <TextView

            android:id="@+id/textvire"
            android:layout_marginStart="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username" />

        <TextView

            android:id="@+id/online_status"
            android:layout_marginStart="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username" />

    </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarchat"
        android:layout_above="@+id/type"
        >


    </android.support.v7.widget.RecyclerView>

    <LinearLayout

        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:weightSum="10">

        <ImageButton
            android:id="@+id/attag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@null"
            android:padding="10dp"
            android:src="@drawable/ic_add_black_24dp" />

        <EditText

            android:id="@+id/massage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:autofillHints="@string/type_a_massage"
            android:background="@null"
            android:ems="10"
            android:fadeScrollbars="true"
            android:hint="@string/type_a_massgae"
            android:inputType="textMultiLine|textCapSentences"
            android:paddingStart="10dp"
            android:paddingTop="14dp"
            android:paddingEnd="10dp"
            android:paddingBottom="12dp" />


        <ImageButton
            android:id="@+id/send_mess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.5"
            android:background="@null"
            android:padding="10dp"
            android:src="@drawable/text_send"
            />


    </LinearLayout>



</RelativeLayout>